Add homepage and services page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,17 @@
-<div class='bg-green-100'>footer</div>
+<div class="bg-brand-green py-3 lg:py-2">
+	<div class="container">
+		<div class="flex flex-col lg:flex-row gap-4 lg:gap-7 justify-between sm:items-center lg:items-end">
+			<div class="flex flex-col sm:flex-row shrink-0 gap-3 sm:gap-7 sm:items-end">
+				<div>
+					<a href="tel:+32470593539" class="font-bold text-white block text-sm">Tel +32 470 59 35 39</a>
+					<a href="mailto:info@louishomecooking.be" class="font-bold text-white text-sm">info@louishomecooking.be</a>
+				</div>
+				<span class="text-white text-sm">Ieperstraat 110 <br/>
+					8830 Hooglede
+				</span>
+				<span class="text-white text-sm">BTW BE 0724.913.068</span>
+			</div>
+			<span class="text-white text-sm">© Louis Homecooking. Alle rechten voorbehouden. Webdesign by Respons.</span>
+		</div>
+	</div>
+</div>
