--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,1 +1,19 @@
-<div class='bg-blue-100'>header</div>
+<div class="container py-5 lg:py-8">
+	<div class="flex justify-between lg:justify-center items-center gap-10">
+		<div class="hidden lg:flex gap-6">
+			<a href="/" class="uppercase font-semibold text-brand-green hover:text-brand-green-dark">Home</a>
+			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">OVER ONS</a>
+			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">AFHAAL</a>
+		</div>
+		<a href="/">
+			<img src="/logo-tavolo.png" class="h-20 md:h-24 lg:h-32" alt="">
+		</a>
+		<div class="hidden lg:flex gap-6">
+			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">FOTOGALLERIJ</a>
+			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">CONTACT</a>
+		</div>
+		<div class="block lg:hidden">
+			<svg class="text-brand-green h-6 sm:h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
+		</div>
+	</div>
+</div>
