--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,86 @@ import Footer from '@components/Footer.astro';
 ---
 
 <Layout title='Astro'>
-	<Header />
-	<div class=''>
-		<h1 class='mt-4 text-xl'>Home</h1>
-		<p>This is the Astro homepage page.</p>
-		<img src='/img/icon-home.png' />
+	<div>
+		<div class="flex flex-col md:flex-row gap-2 md:h-[40rem] lg:h-[45rem] xl:h-[50rem]">
+			<div class="relative md:w-1/2">
+				<img src="/food-tray.jpg" class="absolute inset-0 w-full h-full object-cover object-center" alt="">
+				<div class="w-full absolute inset-0 h-full bg-gradient-to-t from-brand-green z-10"></div>
+				<div class="px-4 lg:px-10 xl:px-20 pt-32 sm:pt-6 pb-6 flex h-full items-end relative z-30 text-center justify-center">
+					<div class="w-full">
+						<a href="/" class="border-white border-[5px] rounded-[65px] sm:rounded-[80px] block max-w-[21rem] sm:max-w-[29rem] mx-auto px-8 py-4">
+							<img src="/logo-louis-homecooking-white.png" class="mx-auto h-24 sm:h-32 lg:h-36" alt="">
+						</a>
+						<h2 class="text-white font-bold italic uppercase text-xl lg:text-2xl pt-4">EVENTS & HOMECOOKING</h2>
+					</div>
+				</div>
+			</div>
+			<div class="relative md:w-1/2">
+				<img src="/bg-boxes.jpg" class="absolute inset-0 w-full h-full object-cover object-center" alt="">
+				<div class="w-full absolute inset-0 h-full bg-gradient-to-t from-brand-green z-10"></div>
+				<div class="px-4 lg:px-10 xl:px-20 pt-32 sm:pt-6 pb-6 flex h-full items-end relative z-30 text-center justify-center">
+					<div class="w-full">
+						<a href="/" class="border-white border-[5px] rounded-[65px] sm:rounded-[80px] block max-w-[21rem] sm:max-w-[29rem] mx-auto px-8 py-4">
+							<img src="/logo-tavolo-white.png" class="mx-auto h-24 sm:h-32 lg:h-36" alt="">
+						</a>
+						<h2 class="text-white font-bold italic uppercase text-xl lg:text-2xl pt-4">AFHAALGERECHTEN</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container pt-5 pb-8 md:pb-11 xl:px-24">
+			<div class="flex flex-col-reverse md:flex-row md:gap-12 xl:gap-16 items-center lg:items-start pb-5 lg:pb-11">
+				<div class="w-full lg:w-1/2 xl:pr-10 py-4 md:py-5">
+					<div class="flex">
+						<div class="h-auto w-1 md:w-2 bg-brand-green shrink-0"></div>
+						<div class="pl-3 md:pl-5">
+							<span class="text-sm md:text-lg text-black">Over ons</span>
+							<h1 class="uppercase text-2xl md:text-3xl font-bold text-brand-green">LOUIS HOMECOOKING</h1>
+						</div>
+					</div>
+					<div class="flex pt-3 md:pt-5">
+						<div class="h-auto w-1 md:w-2 bg-brand-orange shrink-0"></div>
+						<div class="prose text-black prose-p:text-xs/[14px] prose-p:font-light pl-3 md:pl-5">
+							<p>Da pore rempor sunt verum imi, endit ipsaped es aute officidendi rerunto es entum que si temporem dolor simus acero del et ea pliquatis venissit est laboratur audae ommolorum ute nimillab ipideri aecaeptas eicatur.</p>
+							<p>Minctur, quid eos antioris vollupis adit ero est enimint perunt lignient dites eles quam sitibusa qui tenia arcient. </p>
+							<p>perunt lignient dites eles quam sitibusa qui tenia arcient. Disquam quatemp orporrovit premquiandit alit ea debitati offic totatem rerunt, ullamendi acearci cum quunt pro beatiatiam, si autemporum dolupta quidem rerora niende simos endaecabo. Ut volesed quamusciis am, ut re, consequi repe ni ducitiora quas eium sereped minctam.</p>
+						</div>
+					</div>
+					<div class="flex gap-3 pt-8">
+						<div class="w-1/2">
+							<img src="/chef-louis.png" class="" alt="">
+							<span class="text-xs font-light text-black pt-2 text-right block">Chef Louis</span>
+						</div>
+						<div class="w-1/2">
+							<img src="/chef-hannes.png" class="" alt="">
+							<span class="text-xs font-light text-black pt-2 text-right block">Chef Hannes</span>
+						</div>
+					</div>
+				</div>
+				<img src="/louis-homecooking.jpg" class="w-full lg:w-1/2 h-[20rem] md:h-[32rem] object-cover object-[50%_30%]" alt="">
+			</div>
+			<div class="flex flex-col md:flex-row md:gap-12 xl:gap-16 items-center lg:items-start">
+				<img src="/house-dinning.jpeg" class="w-full lg:w-1/2 max-h-56 sm:max-h-70 lg:max-h-80 object-cover object-[50%_30%]" alt="">
+				<div class="w-full lg:w-1/2 xl:pr-10 py-4 md:py-5">
+					<div class="flex">
+						<div class="h-auto w-1 md:w-2 bg-brand-green shrink-0"></div>
+						<div class="pl-3 md:pl-5">
+							<span class="text-sm md:text-lg text-black">Over ons</span>
+							<h1 class="uppercase text-2xl md:text-3xl font-bold text-brand-green">TAVOLO</h1>
+						</div>
+					</div>
+					<div class="flex pt-3 md:pt-5">
+						<div class="h-auto w-1 md:w-2 bg-brand-orange shrink-0"></div>
+						<div class="prose text-black prose-p:text-xs/[14px] prose-p:font-light pl-3 md:pl-5">
+							<p>Da pore rempor sunt verum imi, endit ipsaped es aute officidendi rerunto es entum que si temporem dolor simus acero del et ea pliquatis venissit est laboratur audae ommolorum ute nimillab ipideri aecaeptas eicatur.</p>
+							<p>Minctur, quid eos antioris vollupis adit ero est enimint perunt lignient dites eles quam sitibusa qui tenia arcient. </p>
+							<p>perunt lignient dites eles quam sitibusa qui tenia arcient. Disquam quatemp orporrovit premquiandit alit ea debitati offic totatem rerunt, ullamendi acearci cum quunt pro beatiatiam, si autemporum dolupta quidem rerora niende simos endaecabo. Ut volesed quamusciis am, ut re, consequi repe ni ducitiora quas eium sereped minctam.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<Footer />
 </Layout>
