--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,10 +5,17 @@
 @theme {
 	--font-*: initial;
 	--font-heading: sans-serif;
-	--font-body: sans-serif;
+	--font-body: "Raleway", sans-serif;
 
-	--color-brand-primary: ;
+	--color-brand-green: #618d69;
+	--color-brand-green-dark: #314634;
+	--color-brand-orange: #e69735;
+
+
+	--breakpoint-xl: 76rem;
+	--breakpoint-2xl: initial;
 }
+
 
 @utility container {
 	margin-inline: auto;
@@ -23,7 +30,7 @@
 }
 
 @utility btn-primary {
-	@apply bg-brand-primary text-white;
+	@apply text-black;
 }
 
 @layer base {
