--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -178,31 +178,33 @@ import Footer from '@components/Footer.astro';
 			</div>
 		</div>
 
-		<div class='relative'>
-			<div class='container py-14 pr-0 sm:py-16'>
-				<div class='mr-0 flex items-center pr-0'>
-					<h2 class='text-brand-green -rotate-90 text-2xl font-bold uppercase md:text-3xl'>FOTOGALERIJ</h2>
-					<div class='relative overflow-auto'>
-						<div class='flex flex-col whitespace-nowrap'>
-							<div class='flex h-[20rem] shrink-0 gap-4 lg:h-[26rem]'>
-								<img
-									src='/gallery-image.jpg'
-									class='h-full w-[30rem] shrink-0 object-cover lg:w-[40rem] xl:w-[50rem]'
-									alt=''
-								/>
-								<img
-									src='/gallery-image.jpg'
-									class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
-									alt=''
-								/>
-								<img
-									src='/gallery-image.jpg'
-									class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
-									alt=''
-								/>
-							</div>
-							<div class='relative mt-4 h-2 w-full bg-[#f7dec0]'>
-								<div class='bg-brand-orange absolute inset-y-0 left-0 h-full w-24'></div>
+		<div class='py-14 sm:py-16'>
+			<div class='relative overflow-auto'>
+				<div class='container flex pr-0 whitespace-nowrap'>
+					<div class='mr-0 flex items-center pr-0'>
+						<h2 class='text-brand-green -rotate-90 text-2xl font-bold uppercase md:text-3xl'>FOTOGALERIJ</h2>
+						<div class='relative overflow-auto'>
+							<div class='flex flex-col whitespace-nowrap'>
+								<div class='flex h-[20rem] shrink-0 gap-4 lg:h-[26rem]'>
+									<img
+										src='/gallery-image.jpg'
+										class='h-full w-[30rem] shrink-0 object-cover lg:w-[40rem] xl:w-[50rem]'
+										alt=''
+									/>
+									<img
+										src='/gallery-image.jpg'
+										class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
+										alt=''
+									/>
+									<img
+										src='/gallery-image.jpg'
+										class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
+										alt=''
+									/>
+								</div>
+								<div class='relative mt-4 h-2 w-full bg-[#f7dec0]'>
+									<div class='bg-brand-orange absolute inset-y-0 left-0 h-full w-24'></div>
+								</div>
 							</div>
 						</div>
 					</div>
