Add gallery responsive

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -178,27 +178,27 @@ import Footer from '@components/Footer.astro';
 			</div>
 		</div>
 
-		<div class='py-14 sm:py-16'>
+		<div class='py-12 sm:py-14 md:py-16'>
 			<div class='relative overflow-auto'>
 				<div class='container flex pr-0 whitespace-nowrap'>
-					<div class='mr-0 flex items-center pr-0'>
-						<h2 class='text-brand-green -rotate-90 text-2xl font-bold uppercase md:text-3xl'>FOTOGALERIJ</h2>
+					<div class='mr-0 flex flex-col md:flex-row md:items-center pr-0'>
+						<h2 class='text-brand-green md:-rotate-90 text-2xl font-bold text-left uppercase md:text-3xl pb-2 md:pb-0'>FOTOGALERIJ</h2>
 						<div class='relative overflow-auto'>
-							<div class='flex flex-col whitespace-nowrap'>
-								<div class='flex h-[20rem] shrink-0 gap-4 lg:h-[26rem]'>
+							<div class='flex flex-col whitespace-nowrap mr-4'>
+								<div class='flex h-[15rem] sm:h-[18rem] md:h-[20rem] shrink-0 gap-4 lg:h-[26rem]'>
 									<img
 										src='/gallery-image.jpg'
-										class='h-full w-[30rem] shrink-0 object-cover lg:w-[40rem] xl:w-[50rem]'
+										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
 									<img
 										src='/gallery-image.jpg'
-										class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
+										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
 									<img
 										src='/gallery-image.jpg'
-										class='h-full w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
+										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
 								</div>
