Add correct path to images

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
 			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">AFHAAL</a>
 		</div>
 		<a href="/">
-			<img src="/logo-tavolo.png" class="h-20 md:h-24 lg:h-32" alt="">
+			<img src="/img/logo-tavolo.png" class="h-20 md:h-24 lg:h-32" alt="">
 		</a>
 		<div class="hidden lg:flex gap-6">
 			<a href="/" class="uppercase text-brand-green hover:text-brand-green-dark">FOTOGALLERIJ</a>
