--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Footer from '@components/Footer.astro';
 		<div class='flex flex-col gap-2 md:h-[40rem] md:flex-row lg:h-[45rem] xl:h-[50rem]'>
 			<div class='relative md:w-1/2'>
 				<img
-					src='/food-tray.jpg'
+					src='/img/food-tray.jpg'
 					class='absolute inset-0 h-full w-full object-cover object-center'
 					alt=''
 				/>
@@ -21,7 +21,7 @@ import Footer from '@components/Footer.astro';
 							href='/'
 							class='mx-auto block max-w-[21rem] rounded-[65px] border-[5px] border-white px-8 py-4 sm:max-w-[29rem] sm:rounded-[80px]'>
 							<img
-								src='/logo-louis-homecooking-white.png'
+								src='/img/logo-louis-homecooking-white.png'
 								class='mx-auto h-24 sm:h-32 lg:h-36'
 								alt=''
 							/>
@@ -32,7 +32,7 @@ import Footer from '@components/Footer.astro';
 			</div>
 			<div class='relative md:w-1/2'>
 				<img
-					src='/bg-boxes.jpg'
+					src='/img/bg-boxes.jpg'
 					class='absolute inset-0 h-full w-full object-cover object-center'
 					alt=''
 				/>
@@ -44,7 +44,7 @@ import Footer from '@components/Footer.astro';
 							href='/'
 							class='mx-auto block max-w-[21rem] rounded-[65px] border-[5px] border-white px-8 py-4 sm:max-w-[29rem] sm:rounded-[80px]'>
 							<img
-								src='/logo-tavolo-white.png'
+								src='/img/logo-tavolo-white.png'
 								class='mx-auto h-24 sm:h-32 lg:h-36'
 								alt=''
 							/>
@@ -88,7 +88,7 @@ import Footer from '@components/Footer.astro';
 					<div class='flex gap-3 pt-8'>
 						<div class='w-1/2'>
 							<img
-								src='/chef-louis.png'
+								src='/img/chef-louis.png'
 								class=''
 								alt=''
 							/>
@@ -96,7 +96,7 @@ import Footer from '@components/Footer.astro';
 						</div>
 						<div class='w-1/2'>
 							<img
-								src='/chef-hannes.png'
+								src='/img/chef-hannes.png'
 								class=''
 								alt=''
 							/>
@@ -105,14 +105,14 @@ import Footer from '@components/Footer.astro';
 					</div>
 				</div>
 				<img
-					src='/louis-homecooking.jpg'
+					src='/img/louis-homecooking.jpg'
 					class='h-[20rem] w-full object-cover object-[50%_30%] md:h-[32rem] lg:w-1/2'
 					alt=''
 				/>
 			</div>
 			<div class='flex flex-col items-center md:flex-row md:gap-12 lg:items-start xl:gap-16'>
 				<img
-					src='/house-dinning.jpeg'
+					src='/img/house-dinning.jpeg'
 					class='max-h-56 w-full object-cover object-[50%_30%] sm:max-h-70 lg:max-h-80 lg:w-1/2'
 					alt=''
 				/>
