--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -10,7 +10,7 @@ import Footer from '@components/Footer.astro';
 		<div class='container pt-5 pb-8 md:pb-11'>
 			<div class='flex flex-col items-center sm:flex-row sm:gap-7 lg:items-start lg:gap-12 xl:gap-16'>
 				<img
-					src='/about-image.jpeg'
+					src='/img/about-image.jpeg'
 					class='max-h-56 w-full object-cover object-[50%_70%] sm:max-h-70 sm:w-1/2 lg:max-h-80'
 					alt=''
 				/>
@@ -35,7 +35,7 @@ import Footer from '@components/Footer.astro';
 		<div>
 			<div class='relative'>
 				<img
-					src='serving-image.jpg'
+					src='/img/serving-image.jpg'
 					class='inset-y-0 right-0 h-64 w-full object-cover sm:absolute sm:h-full sm:w-1/2'
 					alt=''
 				/>
@@ -63,7 +63,7 @@ import Footer from '@components/Footer.astro';
 			</div>
 			<div class='relative'>
 				<img
-					src='food-presentation-image.jpg'
+					src='/img/food-presentation-image.jpg'
 					class='inset-y-0 left-0 h-64 w-full object-cover sm:absolute sm:h-full sm:w-1/2'
 					alt=''
 				/>
@@ -89,7 +89,7 @@ import Footer from '@components/Footer.astro';
 
 		<div class='relative pt-8 pb-12 md:pt-11 md:pb-16 lg:pb-20'>
 			<img
-				src='/bg-menu.png'
+				src='/img/bg-menu.png'
 				class='absolute -bottom-16 -left-2 h-[25rem] w-auto rotate-[65deg] opacity-10 sm:-bottom-40 sm:h-[40rem] md:h-[51rem]'
 				alt=''
 			/>
@@ -168,7 +168,7 @@ import Footer from '@components/Footer.astro';
 
 		<div class='relative h-48 md:h-56 lg:h-65'>
 			<img
-				src='/bg-cta.jpg'
+				src='/img/bg-cta.jpg'
 				class='absolute inset-0 h-full w-full object-cover object-[50%_65%]'
 				alt=''
 			/>
@@ -187,17 +187,17 @@ import Footer from '@components/Footer.astro';
 							<div class='flex flex-col whitespace-nowrap mr-4'>
 								<div class='flex h-[15rem] sm:h-[18rem] md:h-[20rem] shrink-0 gap-4 lg:h-[26rem]'>
 									<img
-										src='/gallery-image.jpg'
+										src='/img/gallery-image.jpg'
 										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
 									<img
-										src='/gallery-image.jpg'
+										src='/img/gallery-image.jpg'
 										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
 									<img
-										src='/gallery-image.jpg'
+										src='/img/gallery-image.jpg'
 										class='h-full w-[20rem] sm:w-[30rem] shrink-0 object-cover opacity-40 lg:w-[40rem] xl:w-[50rem]'
 										alt=''
 									/>
